--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,7 +4,8 @@
 	<%= render @messages %>
 </ul>
 
-<%= form_for Message.new do |f| %>
-  <%= f.text_field :content %>
-  <%= f.submit "Send" %>
+<%= form_for Message.new, remote: true do |f| %>
+	<%= f.text_field :content %>
+	<%= f.submit "Send" %>
 <% end %>
+<%= subscribe_to "/messages/new" %>
