test create room

--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -1,2 +1,24 @@
 <h1>LyricalBattle Lobby</h1>
 <p>Lista avoimista huoneista</p>
+<table>
+	<thead>
+		<th>Lock</th>
+		<th>Name</th>
+		<th>Genre</th>
+		<th>Players</th>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Open</td>
+			<td>Test room</td>
+			<td>lyric</td>
+			<td>4/10</td>
+		</tr>
+		<tr>
+			<td>Private</td>
+			<td>Short story room</td>
+			<td>Short story</td>
+			<td>8/10</td>
+		</tr>
+	</tbody>
+</table
