--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,3 @@
 <li>
-	<%= message.created_at.to_time.strftime('%H:%M') %> <%= message.content %>
+	#<%= message.id %> <%= message.created_at.to_time.strftime('%H:%M') %> <%= message.content %> - Room: <%= message.room_number %>
 </li>
