--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -8,8 +8,11 @@
 	<%#= f.text_field :sender %>
 	<%#= f.text_field :room_number %>
 	<input id="message_sender" name="message[sender]" value="testi_sender" type="hidden" />
-	<input id="message_room_number" name="message[room_number]" value="1" type="hidden" />
+	<input id="message_room_number" name="message[room_number]" value="<%= render text: params[:id] %>" type="hidden" />
 	<%= f.text_field :content %>
 	<%= f.submit "Send" %>
 <% end %>
+
+<%= link_to "Back to lobby", rooms_path %>
+
 <%= subscribe_to "/messages/new" %>
