--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,4 +1,4 @@
-<% publish_to "/messages/new" do %>
+<% publish_to "/channels/#{@channel}" do %>
 	$("#chat").append("<%= j render(@message) %>");
 	$("#new_message")[0].reset();
 <% end %>
