--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -15,4 +15,4 @@
 
 <%= link_to "Back to lobby", rooms_path %>
 
-<%= subscribe_to "/messages/new" %>
+<%= subscribe_to "/channels/#{params[:id]}" %>
