migrate sender to user

--- a/app/views/battles/show.html.erb
+++ b/app/views/battles/show.html.erb
@@ -38,11 +38,11 @@
 </div>
 
 <div class="row-fluid">
-	
+
 	<div class="span12">
 		<hr />
 		<%= form_for Message.new, remote: true do |f| %>
-			<input id="message_sender" name="message[sender]" value="testi_sender" type="hidden" />
+			<input id="message_user" name="message[user]" value="testi_sender" type="hidden" />
 			<input id="message_room_number" name="message[room_number]" value="<%= render text: params[:id] %>" type="hidden" />
 			<%= f.text_field :content %>
 			<%= f.submit "Send" %>
