count each battles online users

--- a/app/views/battles/show.html.erb
+++ b/app/views/battles/show.html.erb
@@ -27,7 +27,7 @@
 
 	<div class="span2">
 		<div id="playerWrap" style="overflow-y: scroll; overflow-x: auto; border:2px solid;">
-			<em>2/10</em>
+			<em><span id="online">-</span>/10</em>
 			<ul id="players">
 				<li>Player1</li>
 				<li>Player2</li>
