--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,8 @@
         <% else %>
           <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
         <% end %>
+      </div>
+      <div class="row-fluid">
         <%#= bootstrap_flash %>
         <%= yield %>
       </div><!--/row-->
