--- a/app/views/battles/index.html.erb
+++ b/app/views/battles/index.html.erb
@@ -1,91 +1,6 @@
-<div class="span5">
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th>Lock</th>
-				<th>Name</th>
-				<th>Genre</th>
-				<th>Players</th>
-				<th>Language</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>Open</td>
-				<td><%= link_to "Test battle", battle_path(1) %></td>
-				<td>lyric</td>
-				<td>4/10</td>
-				<td>English</td>
-			</tr>
-			<tr>
-				<td>Private</td>
-				<td><%= link_to "Novelli", battle_path(2) %></td>
-				<td>Short story</td>
-				<td>8/10</td>
-				<td>Finnish</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
-<div class="span3">
-	<div class="row-fluid">
-		<div class="span4">
-			<table class="table table-striped">
-				<caption>My stats</caption>
-				<thead>
-					<tr>
-						<th>Today</th>
-						<th>Week</th>
-						<th>Month</th>
-						<th>Total</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>100p</td>
-						<td>1700p</td>
-						<td>3800p</td>
-						<td>52000p</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+<div class="span5 offset3">
+	<div id="current_battles">
+		<div class="bubble"><%= link_to "Lorem ipsum dolor sit amet, consectetuer adipiscing elit.", battle_path(1) %><br />online 4/10</div>
+		<div class="bubble"><%= link_to "Sed posuere interdum sem. Quisque ligula eros ullamcorper quis.", battle_path(2) %><br />online 8/10</div>
 	</div>
-	<div class="row-fluid">
-		<div class="span4">
-			<form class="form-horizontal">
-				<caption>Create new Battle</caption>
-				<div class="control-group">
-				<label class="control-label" for="name">Name</label>
-					<div class="controls">
-						<input type="text" id="name" placeholder="Battle name">
-					</div>
-				</div>
-
-				<div class="control-group">
-				<label class="control-label" for="name">Genre</label>
-					<div class="controls">
-						<select>
-							<option>Lyrics</option>
-							<option>Short Story</option>
-						</select>
-					</div>
-				</div>
-
-				<div class="control-group">
-					<label class="radio">
-						<input type="radio" name="isOpen" id="isOpen" value="true" checked>
-						Open
-					</label>
-					<label class="radio">
-						<input type="radio" name="isOpen" id="isOpen" value="false">
-						Private
-					</label>
-				</div>
-
-				<button type="submit" class="btn">New Battle</button>
-			</form>
-		</div>
-	</div>
-
 </div>
