--- a/app/views/battles/show.html.erb
+++ b/app/views/battles/show.html.erb
@@ -19,14 +19,16 @@
 	<div class="span10">
 		<div id="chatWrap" style="height: 500px; overflow-y: scroll; overflow-x: auto; border:2px solid;">
 			<ul id="chat">
+				<%= "#{@battle.first_line}" %>
+				<hr />
 				<%= render @messages %>
-				<li><em>Previous messages</em></li>
 			</ul>
 		</div>
 	</div>
 
 	<div class="span2">
 		<div id="playerWrap" style="overflow-y: scroll; overflow-x: auto; border:2px solid;">
+			<div>Battle creator: <%= "#{@user.name}" %></div>
 			<em><span id="online">-</span>/10</em>
 			<ul id="players">
 				<li>Player1</li>
