--- a/app/views/battles/index.html.erb
+++ b/app/views/battles/index.html.erb
@@ -8,7 +8,8 @@
 		</div>
 		<% @battles.each do |battle| %>
 			<div class="bubble">
-				<%= link_to "#{battle.first_line}", battle_path("#{battle.id}") %><br />online 4/10
+				<%= link_to "#{battle.first_line}", battle_path("#{battle.id}") %><br />
+				Creator: <%= "#{battle.user.name}" %>
 			</div>
 		<% end %>
 	</div>
