--- a/app/views/battles/show.html.erb
+++ b/app/views/battles/show.html.erb
@@ -1,18 +1,6 @@
 <% content_for :title, "Battle" %>
- 
+
 <h1>Battle</h1>
-
-<div class="row-fluid">
-
-	<div class="span10">
-		
-		<div id="playerWrap" style="overflow-y: scroll; overflow-x: auto; border:2px solid;">
-			Result
-		</div>
-	</div>
-	<div class="span2"></div>
-	
-</div>
 
 <div class="row-fluid">
 
@@ -21,7 +9,10 @@
 			<ul id="chat">
 				<%= "#{@battle.first_line}" %>
 				<hr />
-				<%= render @messages %>
+				<%= form_for Message.new, remote: true do |f| %>
+					<input id="message_room_number" name="message[room_number]" value="<%= render text: params[:id] %>" type="hidden" />
+					<%= render @messages %>
+				<% end %>
 			</ul>
 		</div>
 	</div>
@@ -30,8 +21,7 @@
 		<div id="playerWrap" style="overflow-y: scroll; overflow-x: auto; border:2px solid;">
 			<div>Battle creator: <%= "#{@user.name}" %></div>
 			<em><span id="online">-</span>/10</em>
-			<ul id="players">
-			</ul>
+			<ul id="players"></ul>
 		</div>
 	</div>
 
