--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,3 @@
 <li>
-	#<%= message.id %> <%= message.created_at.to_time.strftime('%H:%M') %> <%= message.content %> - Room: <%= message.room_number %>, Sender: <%= message.user.name %>
+	#<%= message.id %> <%= message.created_at.to_time.strftime('%H:%M') %> <%= message.content %> - Room: <%= message.battle.id %>, Sender: <%= message.user.name %>
 </li>
