--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,4 @@
 <li>
-	#<%= message.id %> <%= message.created_at.to_time.strftime('%H:%M') %> <%= message.content %> - Room: <%= message.battle.id %>, Sender: <%= message.user.name %>
+	<%= message.user.name %> - <%= message.created_at.to_time.strftime('%H:%M') %><br />
+	<%= message.content %> Continue: <input id="message_content" name="message[content]" /> <button value="<%= message.id %>">send</button>
 </li>
